--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json",
-                        "Authorization": "Bearer YOUR_HUGGINGFACE_KEY"
+                        "Authorization": "Bearer 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"
                     },
                     body: JSON.stringify({ inputs: prompt })
                 });
